--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ description = "Ethcore client."
 name = "ethcore-logger"
 version = "1.5.0"
 license = "GPL-3.0"
-authors = ["Ethcore <admin@ethcore.io>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
 log = "0.3"
